# agent-orchestrator-mult-tenant

./: .env.example  .gitignore  README.md  config.json.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
agent-os/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
agent-os/agents/: __init__.py  assist_agent.py  content_creator_agent.py  model_factory.py  profile.py  profile_type.py
agent-os/agents/assist/: __init__.py  agent.py
agent-os/agents/content_creator/: __init__.py  agent.py  profile.py
agent-os/agents/core/: __init__.py  profile.py  profile_type.py
agent-os/agents/humanizer/: __init__.py  agent.py  profile.py
agent-os/app/: __init__.py  config.yaml  main.py
agent-os/app/config/: organizations.example.json
agent-os/app/routes/: __init__.py  knowledge.py
agent-os/config/: __init__.py  organization_config.py  organization_context.py
agent-os/db/: __init__.py  session.py  url.py
agent-os/knowledge/: __init__.py
agent-os/middleware/: organization_middleware.py
agent-os/scripts/: entrypoint.sh  wait_for_db.py
agent-os/teams/: __init__.py
agent-os/teams/content_creator_humanizer/: __init__.py  team.py
agent-os/tools/: __init__.py  github.py
agent-ui/: Dockerfile
agent-ui/src/: store.ts
agent-ui/src/api/: os.ts  routes.ts
agent-ui/src/components/chat/Sidebar/: Sidebar.tsx
agent-ui/src/components/chat/Sidebar/KnowledgeUpload/: KnowledgeUploadModal.tsx  index.ts
doc/: SMART_SQUAD_AGENTS_AND_RAG.md
